# LevelRendererVulkan

./: .gitignore
LevelRenderer/: BasicPixelShader.hlsl  BasicVertexShader.hlsl  CMakeLists.txt  LevelLoaderLog.txt  TexturePixelShader.hlsl  h2bParser.h  load_data_oriented.h  main.cpp  renderer.h
LevelRenderer/Levels/: SmallTest1.txt
LevelRenderer/ModelsOBJ/: kriegsmesser.mtl
LevelRenderer/Textures/: kriegsmesser.h  kriegsmesser.h2b
